--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="say">狗瑶，认识你这些天，每天都很开心，每天都有所期待，给我平淡的生活添加了一丝温暖，我知道你经历了很多，给你造成了好多阴影，以至于你现在待人都很害怕，可是，人总得向前看，你也不能一朝被蛇咬十年怕井绳啊，生活是自己过的，也是需要自己经历的，你不应该因为这些事困扰着自己，反而你应该庆幸你经历了这些事，增加了你的人生阅历，会让你明白很多道理，让你的人生也精彩，我知道你现在害怕感情，害怕相信别人，因为你在怕你受伤害，但是我呢，并不是你嘴里的那种人我基本除了工作和异性0社交，每天都是三点一线的上班，偶尔和那几个哥们出去喝喝酒干嘛的，所以你就把你心放肚子里，就像你说的一样，你从深渊走出来以后就遇到我了，那或许换句话来说，我就是你的救赎呢，是上天派我来拉你一把的呢，我这个人不善言辞，也是个直男，很多话不知道怎么说，但是我愿意陪伴在你左右，你有很多毛病，我也有很多毛病，都是需要相互磨合的，没有两个人天生就合适，所以不要一有点小矛盾就吵得不可开交，我要把你从那段阴霾里面带出来，但是奥，和我相处你会开心，也会很累的，因为我比较容易多愁善感，喜欢多想什么的，你可要想好哟，你以后不开心，有什么事你都要告诉我，好事我陪你一起来开心，坏事，我陪你一起承担，陪着你一起开心一起难过，一起度过以后的每一天，我希望你把我写进你的人生规划里面，我也很期待以后每一天都有你的陪伴。</span>
                     <br>
                     <br>
-                    <span class="say"><span class="space"></span><span class="space"></span> -- 你的哈怀贤</span>
+                    <span class="say"><span class="space"></span><span class="space"></span> -- 你的哈士奇</span>
                 </div>
             </div>
             <div id="clock-box">
