--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     </div>
 
-    <audio id="media" src="little_luck.mp3" loop></audio>
+    <audio id="media" src="just_love_you.mp3" loop></audio>
 
     <script>
         (function () {
